# OpenBet

./: .env.example  .gitignore  .vercelignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_add_odds_columns.py  002_add_h2h_context_value_columns.py  003_add_job_status_table.py  004_add_venue_form_columns.py
scripts/: generate_password_hash.py  seed_historical.py  train_initial.py
src/: config.py  database.py
src/api/: app.py  auth.py  deps.py
src/api/routes/: admin.py  auth_routes.py  health.py  performance.py  picks.py  predictions.py  teams.py
src/collectors/: api_football.py  base.py  football_data.py  odds_api.py  tasks.py
src/engine/: betting.py  claude_reasoning.py  picks.py
src/features/: builder.py  bulk_builder.py  elo.py  form.py  h2h.py  home_advantage.py  match_context.py  strength.py  xg.py
src/learning/: backtester.py  evaluator.py  retrainer.py  tracker.py
src/models/: __init__.py  elo.py  feature.py  job_status.py  match.py  prediction.py  team.py
src/models_ml/: ensemble.py  poisson.py  training.py  xgboost_model.py
src/workers/: celery_app.py  scheduler.py  schedules.py
static/: index.html
trained_models/: meta_learner_v1.joblib  xgboost_v1.joblib
