[project]
name = "openbet"
version = "0.1.0"
description = "Professional Football Prediction Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "pydantic-settings>=2.7,<3.0",
    "pandas>=2.2,<3.0",
    "numpy>=2.1,<3.0",
    "scipy>=1.14,<2.0",
    "scikit-learn>=1.6,<2.0",
    "xgboost>=2.1,<3.0",
    "aiohttp>=3.11,<4.0",
    "requests>=2.32,<3.0",
    "celery[redis]>=5.4,<6.0",
    "anthropic>=0.42,<1.0",
    "joblib>=1.4,<2.0",
    "psycopg2-binary>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
